examples/test/testpolicy5427.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5427
  namespace: namespace453
spec:
  podSelector:
    matchLabels:
      key9: value25
      key3: value43
      key26: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value2
          key41: value4
          key49: value9
      podSelector:
        matchLabels:
          key11: value31
